add play and pause buttons

--- a/0_race.html
+++ b/0_race.html
@@ -1,12 +1,28 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title></title>
         <script src="lib/Tone.min.js"></script>
         <script src="lib/phaser.min.js"></script>
         <script src="src/0_race.js"></script>
+
+        <style>
+            #controls {
+                text-align: center;
+            }
+        </style>
     </head>
 
     <body>
+        <!--
+        <br>
+        <div id="controls">
+            <span id="playBtn">play</span>
+             | 
+             <span id="pauseBtn">pause</span>
+        </div>
+        <br>
+        -->
         <div id="game">
         </div>
     </body>
