--- a/0_chase.html
+++ b/0_chase.html
@@ -4,7 +4,7 @@
         <title></title>
         <script src="lib/Tone.min.js"></script>
         <script src="lib/phaser.min.js"></script>
-        <script src="src/0_race.js"></script>
+        <script src="src/0_chase.js"></script>
 
         <style>
             #controls {
