--- a/0_chase.html
+++ b/0_chase.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title></title>
+        <script src="lib/StartAudioContext.js"></script>
         <script src="lib/Tone.min.js"></script>
         <script src="lib/phaser.min.js"></script>
         <script src="src/0_chase.js"></script>
