enclose audio context starting stuff in window.onload

--- a/0_chase.html
+++ b/0_chase.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title></title>
+        <script src="lib/jquery-3.2.1.min.js"></script>
         <script src="lib/StartAudioContext.js"></script>
         <script src="lib/Tone.min.js"></script>
         <script src="lib/phaser.min.js"></script>
@@ -25,6 +26,10 @@
         <br>
         -->
         <div id="game">
+        </div>
+
+        <div id="debug">
+            <!-- hello apple -->
         </div>
     </body>
 </html>
