add index and headings, rename chase files again

--- a/i_chase.html
+++ b/i_chase.html
@@ -1,21 +1,17 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title></title>
-        <script src="lib/jquery-3.2.1.min.js"></script>
+        <title>i. chase</title>
+        <!-- <script src="lib/jquery-3.2.1.min.js"></script> -->
         <script src="lib/StartAudioContext.js"></script>
         <script src="lib/Tone.min.js"></script>
         <script src="lib/phaser.min.js"></script>
-        <script src="src/0_chase.js"></script>
-
-        <style>
-            #controls {
-                text-align: center;
-            }
-        </style>
+        <script src="src/i_chase.js"></script>
+        <link href="src/style.css" rel="stylesheet" type="text/css"/>
     </head>
 
     <body>
+        <h1>i. chase</h1>
         <!--
         <br>
         <div id="controls">
