fiddle around with some center-justify styling

--- a/i_chase.html
+++ b/i_chase.html
@@ -27,5 +27,11 @@
         <div id="debug">
             <!-- hello apple -->
         </div>
+
+        <div class="pre_links_padding">
+        </div>
+        <div class="links">
+            <a href="index.html">back to etudes</a>
+        </div>
     </body>
 </html>
