--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
 
     <body>
         <h1>sync etudes</h1>
-        <div id="links">
+        <div class="links index_links">
             <a href="i_chase.html">i. chase</a>
+            <br>
+            <a href="ii_race.html">ii. race</a>
         </div>
     </body>
 </html>
