add 'more soon' note to index

--- a/index.html
+++ b/index.html
@@ -11,5 +11,9 @@
             <br>
             <a href="ii_race.html">ii. race</a>
         </div>
+
+        <div class="more_soon">
+            more soon...
+        </div>
     </body>
 </html>
