create iii. crowd from i., set up lydian notes

--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
         <h1>sync etudes</h1>
         <div class="links index_links">
             <a href="i_chase.html">i. chase</a>
-            <br>
+            <br/>
             <a href="ii_race.html">ii. race</a>
+            <br/>
+            <a href="iii_crowd.html">iii. crowd</a>
         </div>
 
         <div class="more_soon">
